--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
+    "google-auth-library": "^9.11.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
+    "nodemailer": "^6.9.14",
     "prisma": "^3.9.2"
   }
 }
